# celery-learning

./: celerybeat-schedule.db  docker-compose.yaml  pyproject.toml
demo/: invoker.py  task.py
tests/: test_celery_poc.py
