[tool.poetry]
name = "celery-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "internal"
url = "http://k8s.local.technology:8081/nexus/repository/pypi-public/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
celery = "^4.4.7"
coverage = "^5.2.1"
fastApi = "^0.61.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
